# SbdMail

./: .gitignore  2023-04-17.json  ConfigIni.py  LaspSBD.py  README.md  SbdProcessor.py  gpt.py  mcm_1045.json  pyproject.toml  sbdmail.py
Data/SampleJson/: mcm_1044.json
Data/SampleSBD/: 300434063471290_001546.sbd  300434063471290_001547.sbd
SampleMsgs/: 300434063471290_001548.sbd  300434063471290_001549.sbd  README.md
SbdMail/: LaspSBD.py  SbdMail.py  __main__.py
SbdMail/Data/SampleJson/: mcm_1042.json  mcm_1045.json  mcm_1046.json
SbdMail/SbdMail.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: ConfigIni.py  SbdProcessor.py  sbdmail.py
